--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <h1 th:text="#{auth.login.form.title}">FORM</h1>
-<form action="/loginProcess" method="POST">
+<form action="/login/loginProcess" method="POST">
     <div>
         <label for="username" th:text="#{auth.reg.form.email}">Email</label>
         <input type="email" id="username" name="username"/>
@@ -15,7 +15,7 @@
         <p th:text="#{auth.login.form.error}">Error</p>
     </div>
     <div>
-        <a href="/registration" th:text="#{auth.login.form.register}"></a>
+        <a href="/login/registration" th:text="#{auth.login.form.register}"></a>
     </div>
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
     <button type="submit" th:text="#{auth.login.form.submit}">submit</button>
