--- a/src/main/resources/templates/login/registration.html
+++ b/src/main/resources/templates/login/registration.html
@@ -2,22 +2,22 @@
 <html xmlns:th="http://www.thymeleaf.org">
 	<body>
 		<h1 th:text="#{auth.reg.form.title}">FORM</h1>
-		<form action="/register" th:object="${user}" method="POST">
+		<form action="/login/register" th:object="${user}" method="POST">
 		    <div>
-		        <label th:text="#{auth.reg.form.email}">Email</label>
-		        <input type="email" th:field="*{email}"/>
+		        <label for="email" th:text="#{auth.reg.form.email}">Email</label>
+		        <input type="email" id="email" th:field="*{email}"/>
 		        <p th:each="error : ${#fields.errors('email')}"
 		          th:text="${error}">Validation error</p>
 		    </div>
 		    <div>
-		        <label th:text="#{auth.reg.form.password}">Password</label>
-		        <input type="password" th:field="*{password}"/>
+		        <label for="password" th:text="#{auth.reg.form.password}">Password</label>
+		        <input type="password" id="password" th:field="*{password}"/>
 		        <p th:each="error : ${#fields.errors('password')}"
 		          th:text="${error}">Validation error</p>
 		    </div>
 		    <div>
-		        <label th:text="#{auth.reg.form.confirmPassword}">Confirmar password</label>
-		        <input type="password" th:field="*{matchingPassword}"/>
+		        <label for="matchingPassword" th:text="#{auth.reg.form.confirmPassword}">Confirmar password</label>
+		        <input type="password" id="matchingPassword" th:field="*{matchingPassword}"/>
 		    </div>
             <p th:each="error : ${#fields.globalErrors()}" th:text="${error}">Global validation error</p>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
